[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://src/Screens/UpgradeScreen.gd" type="Script" id=3]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/Scripts/PlayButton.gd" type="Script" id=5]

[node name="UpgradeScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="." instance=ExtResource( 4 )]
margin_left = -558.5
margin_top = 50.6114
margin_right = 558.5
margin_bottom = 107.612
text = "Upgrade"

[node name="GoldLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = 136.723
margin_right = 88.0
margin_bottom = 167.723
theme = ExtResource( 2 )
text = "Your Gold: %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -582.0
margin_top = -338.886
margin_right = 584.0
margin_bottom = 211.114
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpgradeHealth" type="Button" parent="HBoxContainer"]
margin_right = 230.0
margin_bottom = 550.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Upgrade Health"
__meta__ = {
"_editor_description_": ""
}

[node name="UpgradeSpeed" type="Button" parent="HBoxContainer"]
margin_left = 234.0
margin_right = 464.0
margin_bottom = 550.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Upgrade Speed"

[node name="UpgradeJump" type="Button" parent="HBoxContainer"]
margin_left = 468.0
margin_right = 698.0
margin_bottom = 550.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Upgrade Jump"

[node name="UpgradeGun" type="Button" parent="HBoxContainer"]
margin_left = 702.0
margin_right = 932.0
margin_bottom = 550.0
size_flags_horizontal = 3
text = "Upgrade Gun"

[node name="UpgradeShields" type="Button" parent="HBoxContainer"]
margin_left = 936.0
margin_right = 1166.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Upgrade Shield"

[node name="ChangeSceneButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -273.0
margin_top = -217.173
margin_right = 273.0
margin_bottom = -23.1735
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Continue"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
next_scene_path = "res://src/Levels/Level02.tscn"

[node name="HealthLabel" type="Label" parent="."]
margin_left = 455.6
margin_top = 767.04
margin_right = 513.6
margin_bottom = 798.04
text = "$ %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLabel" type="Label" parent="."]
margin_left = 687.0
margin_top = 767.04
margin_right = 745.0
margin_bottom = 798.04
text = "$ %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpLabel" type="Label" parent="."]
margin_left = 924.152
margin_top = 767.04
margin_right = 982.152
margin_bottom = 798.04
text = "$ %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GunLabel" type="Label" parent="."]
margin_left = 1163.18
margin_top = 767.04
margin_right = 1221.18
margin_bottom = 798.04
text = "$ %s"

[node name="ShieldLabel" type="Label" parent="."]
margin_left = 1404.86
margin_top = 767.04
margin_right = 1444.86
margin_bottom = 798.04
text = "$ %s
"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="HBoxContainer/UpgradeHealth" to="." method="_on_UpgradeHealth_button_up"]
[connection signal="button_up" from="HBoxContainer/UpgradeSpeed" to="." method="_on_UpgradeSpeed_button_up"]
[connection signal="button_up" from="HBoxContainer/UpgradeJump" to="." method="_on_UpgradeJump_button_up"]
[connection signal="button_up" from="HBoxContainer/UpgradeGun" to="." method="_on_UpgradeGun_button_up"]
[connection signal="button_up" from="HBoxContainer/UpgradeShields" to="." method="_on_UpgradeShields_button_up"]
[connection signal="button_up" from="ChangeSceneButton" to="ChangeSceneButton" method="_on_button_up"]
[connection signal="button_up" from="ChangeSceneButton" to="." method="_on_ChangeSceneButton_button_up"]
